--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,5 @@
+{<img src="https://codeclimate.com/github/dagosi89/Balance.png" />}[https://codeclimate.com/github/dagosi89/Balance]
+
 == Welcome to Balance
 
 See me working at: http://moneybalance.herokuapp.com/
